modify modals and food image

--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
 
 	</div>
 
-
-
-	<!-- Modal 1-->
+  <!-- Modal 1-->
 <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -160,12 +158,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel2">Drag and Drop App</h4>
+        <h4 class="modal-title" id="myModalLabel2">Food Guide App</h4>
       </div>
       <div class="modal-body">
-        <img class="img-responsive" src="img/drag-and-drop2.jpg" alt="Drag and Drop image">
+        <img class="img-responsive" src="img/food-guide-large.jpg" alt="Drag and Drop image" srcset="img/food-guide-medium.jpg 320w, img/drag-and-drop2-medium.jpg 640w, img/food-guide-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <br>
-        This app is designed to test the difference between manufactured goods and raw materials through a drag and drop game.The user must place the different objects in their correct category.
+         This app is designed to keep track of your meals. It keeps track of the calories per meal and the total calories. It also allows you to organize your meals by breakfast, lunch, dinner or snack.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -205,7 +203,7 @@
       <div class="modal-body">
 
         <br>
-        This project centers around optimizing a website for performance and speed. I utilized Google's pagespeed insights in order to pinpoint areas for performance optimization. I then used the necessary tools and techniques in order to optimize the website.
+        This project centers around optimizing a website for performance and speed. I utilized Google&apos;s pagespeed insights in order to pinpoint areas for performance optimization. I then used the necessary tools and techniques in order to optimize the website.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -215,7 +213,7 @@
 </div>
 
 
-	<!-- Modal 5-->
+  <!-- Modal 5-->
 <div class="modal fade" id="project5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -225,7 +223,7 @@
       <div class="modal-body">
 
         <br>
-        This is an app designed to search and filter restaurants in the Broomfield-Colorado area and provide detailed information about the restaurants. It utilizes api's to pull in the map and restaurant info and the javascript framework of knockout.js to accomplish tasks such as filtering the restaurants and creating the markers.
+        This is an app designed to search and filter restaurants in the Broomfield-Colorado area and provide detailed information about the restaurants. It utilizes api&apos;s to pull in the map and restaurant info and the javascript framework of knockout.js to accomplish tasks such as filtering the restaurants and creating the markers.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -256,7 +254,7 @@
 
 
 
-	<!-- Modal 7-->
+  <!-- Modal 7-->
 <div class="modal fade" id="project7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
