--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 	<div class="container" id="content">
 		<div class="row">
 
-      <div class="col-xs-6">
+      <div class="col-xs-6 text-center">
         <img class="title-logo" src="img/mouse_logo-large.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
       </div>
 
-      <div class="col-xs-6 text-right text-uppercase">
+      <div class="col-xs-6 text-center text-uppercase">
         <h1 class="title title-super">Rennie Bevineau</h1>
         <h4 class="subtitle">Front-End Web Developer</h4>
       </div>
