--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
     </div>
   </nav>
 	<div class="container" id="content">
-		<div class="row">
 
-      <div class="col-xs-6 text-center">
-        <img class="title-logo" src="img/mouse_logo-large.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
-      </div>
+    <div class="rounded-corners">
+  		<div class="row">
 
-      <div class="col-xs-6 text-center text-uppercase">
-        <h1 class="title title-super">Rennie Bevineau</h1>
-        <h4 class="subtitle">Front-End Web Developer</h4>
+        <div class="col-xs-6 text-left">
+          <img class="title-logo" src="img/mouse_logo-large.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        </div>
+
+        <div class="col-xs-6 text-center text-uppercase">
+          <h1 class="title-super">Rennie Bevineau</h1>
+          <h4 class="">Front-End Web Developer</h4>
+        </div>
       </div>
     </div>
 
@@ -57,7 +60,8 @@
     <div class="row">
 
       <div class="col-xs-12">
-        <img class="center-block img-responsive rounded-corners" src="img/guell-large.jpg" alt="guell park image" srcset="img/guell-small.jpg 320w, img/guell-medium.jpg 640w, img/guell-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+
+        <img class="title-image center-block img-responsive rounded-corners" src="img/guell-large.jpg" alt="guell park image" srcset="img/guell-medium.jpg 320w, img/guell-medium.jpg 640w, img/guell-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
       </div>
     </div>
 
