--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
     <div class="rounded-corners">
   		<div class="row">
 
-        <div class="col-xs-6 text-left">
+        <div class="col-xs-6">
           <img class="title-logo" src="img/mouse_logo-large.jpg" alt="my logo image" srcset="img/mouse_logo-small.jpg 320w, img/mouse_logo-medium.jpg 640w, img/mouse_logo-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         </div>
 
-        <div class="col-xs-6 text-center text-uppercase">
+        <div class="col-xs-6 text-right text-uppercase">
           <h1 class="title-super">Rennie Bevineau</h1>
-          <h4 class="">Front-End Web Developer</h4>
+          <h4 class="subtitle zero-bottom"><strong>Front-End Web Developer</strong></h4>
         </div>
       </div>
     </div>
