--- a/about.html
+++ b/about.html
@@ -40,16 +40,16 @@
 	</nav>
 
 	<div class="bg-blue">
-		<div class="container">
+		<div class="container" id="content">
 			<div class="row">
 
 				<div class="col-xs-4 col-sm-2 col-lg-1">
-					<img class="title-logo img-responsive" src="img/mouse_logo.jpg"  alt="my logo image">
+					<img class="pages-logo img-responsive" src="img/mouse_logo.jpg"  alt="my logo image">
 				</div>
 
 				<div class=" col xs-8 col-sm-10 col-lg-11">
-					<h3 class="title"><strong>About Rennie Bevineau</strong></h3>
-					<h4 class="subtitle">Front-End Web Developer</h4>
+					<h3 class="pages-title"><strong>About Rennie Bevineau</strong></h3>
+					<h4 class="pages-title">Front-End Web Developer</h4>
 				</div>
 			</div> <!-- end of row -->
 		</div> <!-- end of container -->
