--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 			<div class="row">
 
 				<div class="col-sm-12">
-					<img class="title-logo" src="img/mouse_logo.jpg"  alt="my logo image">
+					<img class="pages-logo" src="img/mouse_logo.jpg"  alt="my logo image">
 					<h2><strong>Contact</strong></h2>
 				</div>
 			</div> <!-- end of row -->
