--- a/about.html
+++ b/about.html
@@ -60,8 +60,13 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h1>Experience</h1>
+					<div class="row">
+						<div class="col-xs-1"><span class="star">&#9885;</span></div>
+						<div class="col-xs-11">Graduate of the Front-End Web Developer program with experience working on various projects.
+						</div>
+					</div>
 				<p>
-					I'm a graduate of the front-end Nanodegree from UDACITY (technical training company) with experience working on various front-end projects with a variety of objectives using the necessary tools and techniques to achieve the desired results. I strive to create excellent end products, to stay current with my technical knowledge and to improve as a web developer every day.
+					<span class="star">&#9885;</span>Experience with popular javascript frameworks (Knockout.js, Backbone.js and Angular.js) for the creation of Single Page Applications.
 				</p>
 			</div>
 			<div class="col-sm-6">
@@ -76,6 +81,7 @@
 					</p>
 			</div>
 		</div>
+		I strive to create excellent end products, to stay current with my technical knowledge and to improve as a web developer every day.
 	</div>
 
 
