change skills section

--- a/about.html
+++ b/about.html
@@ -60,28 +60,28 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h1>Experience</h1>
-					<div class="row">
-						<div class="col-xs-1"><span class="star">&#9885;</span></div>
-						<div class="col-xs-11">Graduate of the Front-End Web Developer program with experience working on various projects.
-						</div>
-					</div>
-				<p>
-					<span class="star">&#9885;</span>Experience with popular javascript frameworks (Knockout.js, Backbone.js and Angular.js) for the creation of Single Page Applications.
-				</p>
+				<span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Training in Front-End Web Development</strong></div>
+				<div class="spacer"></div>
+				<div><span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Experience creating single page web applications with popular javascript frameworks (Knockout.js, Backbone.js and Angular.js)</strong></div></div>
+				<div class="spacer"></div>
+				<div><span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Responsive design with Bootstrap and flexible grid layouts</strong></div></div>
+
 			</div>
 			<div class="col-sm-6">
 				<img class="img-responsive" src="img/sitting.jpg" alt="Photo of Rennie" id="my-image">
 			</div>
-		</div> <!-- end of main content -->
+		</div> <!-- end of first row of main content -->
+
+
 		<div class="row">
 			<div class="col-sm-8">
 				<h1>Skills</h1>
 					<p>
-						I have experience creating responsive web pages that look great on all devices. I also have experience integrating 3rd party API's which help users explore and interact with data. I have experience with website speed and performance optimization, which is particularly important when thinking about development for mobile devices. I also have experience creating projects that Utilize Javascript and JSON to create added user interactivity.
+						Experience creating responsive web pages that look great on all devices. I enjoy integrating 3rd party API's which help users explore and interact with data. I use tools to improve website speed and performance, which is particularly important when thinking about development for mobile devices. I also have experience creating projects that Utilize Javascript and JSON to create added user interactivity. I strive to create excellent end products, to stay current with my technical knowledge and to improve as a web developer every day.
 					</p>
 			</div>
 		</div>
-		I strive to create excellent end products, to stay current with my technical knowledge and to improve as a web developer every day.
+
 	</div>
 
 
