--- a/about.html
+++ b/about.html
@@ -60,11 +60,13 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h1>Experience</h1>
-				<span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Training in Front-End Web Development</strong></div>
+				<br>
+				<span class="star"><strong>&#128309;</strong></span><div class="wrap medium-text"> Training in Front-End Web Development</div>
+				<br>
+				<br>
+				<span class="star"><strong>&#128309;</strong></span><div class="wrap medium-text"> Experience creating single page web applications with popular javascript frameworks (Knockout.js, Backbone.js and Angular.js)</div>
 				<div class="spacer"></div>
-				<div><span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Experience creating single page web applications with popular javascript frameworks (Knockout.js, Backbone.js and Angular.js)</strong></div></div>
-				<div class="spacer"></div>
-				<div><span class="star"><strong>&#9885;</span><div class="wrap medium-text"> Responsive design with Bootstrap and flexible grid layouts</strong></div></div>
+				<span class="star"><strong>&#128309;</strong></span><div class="wrap medium-text"> Responsive design with Bootstrap and flexible grid layouts</div>
 
 			</div>
 			<div class="col-sm-6">
