--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
     </div>
 
     <div class="row text-center">
+
+      <div class="col-sm-4">
+        <img class="center-block img-responsive featured-image" src="img/trainer-large.jpg" alt="science blog image" data-toggle="modal" data-target="#project3" srcset="img/science-small.jpg 320w, img/trainer-medium.jpg 640w, img/trainer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        <h4>Click photo for more info</h4>
+        <h2 class="space">Vocab Trainer App</h2>
+
+        <p><a class="link" href="http://renniesb.github.io/vocab_list/index.html#/">link: http://renniesb.github.io/vocab_list/index.html#/</a></p>
+      </div>
+
       <div class="col-sm-4">
         <img class="center-block img-responsive featured-image rounded-corners" src="img/restaurantexplorer-large.jpg" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/restaurantexplorer-small.jpg 320w, img/restaurantexplorer-medium.jpg 640w, img/restaurantexplorer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <h4>Click photo for more info</h4>
@@ -87,24 +96,11 @@
         <h2 class="space">Food Guide App</h2>
         <p><a class="link" href="http://renniesb.github.io/food_guide/index.html">link: http://renniesb.github.io/food_guide/index.html</a></p>
       </div>
-
-      <div class="col-sm-4">
-        <img class="center-block img-responsive featured-image rounded-corners" src="img/frogger-large.jpg" alt="frogger Game image" data-toggle="modal" data-target="#project6" srcset="img/frogger-small.jpg 320w, img/frogger-medium.jpg 640w, img/frogger-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
-        <h4>Click photo for more info</h4>
-        <h2 class="space">Frogger Game</h2>
-        <p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">link: http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
-      </div>
-
-    </div>
+  </div>
 
     <div class="row text-center">
 
-      <div class="col-sm-4">
-        <img class="center-block img-responsive featured-image rounded-corners" src="img/resume-large.jpg" alt="resume app image" data-toggle="modal" data-target="#project7" srcset="img/resume-small.jpg 320w, img/resume-medium.jpg 640w, img/resume-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
-        <h4>Click photo for more info</h4>
-        <h2 class="space">Resume App</h2>
-        <p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">link: http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
-      </div>
+
       <div class="col-sm-4">
         <img class="center-block img-responsive featured-image rounded-corners" src="img/flashcards-large.jpg" alt="flashcard image" data-toggle="modal" data-target="#project1" srcset="img/flashcards-small.jpg 320w, img/flashcards-medium.jpg 640w, img/flashcards-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <h4>Click photo for more info</h4>
@@ -112,24 +108,29 @@
         <p><a class="link" href="http://renniesb.github.io/languagesite/Flashcards.html">link: http://renniesb.github.io/languagesite/Flashcards.html</a></p>
       </div>
 
-
-
-      <div class="col-sm-4">
-        <img class="center-block img-responsive featured-image" src="img/science-large.jpg" alt="science blog image" data-toggle="modal" data-target="#project3" srcset="img/science-small.jpg 320w, img/science-medium.jpg 640w, img/science-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
-        <h4>Click photo for more info</h4>
-        <h2 class="space">Science Blog</h2>
-
-        <p><a class="link" href="http://sciencesanjosesg.blogspot.com.es/">link: http://sciencesanjosesg.blogspot.com.es/</a></p>
-      </div>
-
-    </div>
-    <div class="row text-center">
-      <div class="col-sm-4">
+       <div class="col-sm-4">
         <img class="center-block img-responsive featured-image rounded-corners" src="img/pagespeed-large.jpg" alt="website optimization image" data-toggle="modal" data-target="#project4" srcset="img/pagespeed-small.jpg 320w, img/pagespeed-medium.jpg 640w, img/pagespeed-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <h4>Click photo for more info</h4>
         <h2 class="space">Website Optimization- Page Speed and Efficiency</h2>
 
         <p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-mobile-portfolio/">link: http://renniesb.github.io/frontend-nanodegree-mobile-portfolio/</a></p>
+      </div>
+
+       <div class="col-sm-4">
+        <img class="center-block img-responsive featured-image rounded-corners" src="img/frogger-large.jpg" alt="frogger Game image" data-toggle="modal" data-target="#project6" srcset="img/frogger-small.jpg 320w, img/frogger-medium.jpg 640w, img/frogger-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        <h4>Click photo for more info</h4>
+        <h2 class="space">Frogger Game</h2>
+        <p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-arcade-game/">link: http://renniesb.github.io/frontend-nanodegree-arcade-game/</a></p>
+      </div>
+
+    </div>
+    <div class="row text-center">
+
+       <div class="col-sm-4">
+        <img class="center-block img-responsive featured-image rounded-corners" src="img/resume-large.jpg" alt="resume app image" data-toggle="modal" data-target="#project7" srcset="img/resume-small.jpg 320w, img/resume-medium.jpg 640w, img/resume-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        <h4>Click photo for more info</h4>
+        <h2 class="space">Resume App</h2>
+        <p><a class="link" href="http://renniesb.github.io/frontend-nanodegree-resume/">link: http://renniesb.github.io/frontend-nanodegree-resume/</a></p>
       </div>
     </div>
 
@@ -240,12 +241,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel6">Science Blog</h4>
+        <h4 class="modal-title" id="myModalLabel6">Vocab Trainer Application</h4>
       </div>
       <div class="modal-body">
 
         <br>
-        This is a blog that uses videos, games and other resources to teach science topics to children.
+       An application to find Spanish words and their definitions along with example sentences. These items can later be added to your vocab list to have a list of words with definitions and example sentences. Used Angular.js to aide with data binding and routing procedures. Also used custom directives and controllers
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
