--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       </div>
 
       <div class="col-sm-4">
-        <img class="center-block img-responsive featured-image rounded-corners" src="img/restaurantexplorer-large.jpg" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/restaurantexplorer-small.jpg 320w, img/restaurantexplorer-medium.jpg 640w, img/restaurantexplorer-large.jpg 1024w" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
+        <img class="center-block img-responsive featured-image rounded-corners" src="img/ala.png" alt="restaurant explorer project image" data-toggle="modal" data-target="#project5" srcset="img/ala.png 320w, img/ala.png 640w, img/ala.png" sizes="(min-width: 300px) 50vw, (min-width: 700px) 70vw, 100vw">
         <h4>Click photo for more info</h4>
-        <h2 class="space">Restaurant Explorer App</h2>
+        <h2 class="space">Language Academy Website</h2>
 
         <p><a class="link" href="http://renniesb.github.io/neighborhood-explorer/index.html">link: http://renniesb.github.io/neighborhood-explorer</a></p>
       </div>
